--- a/webapp/src/main/webapp/about/index.html
+++ b/webapp/src/main/webapp/about/index.html
@@ -54,7 +54,7 @@ th, td {
     </head>
     <body>
         <div id="wrapper">
-            <img alt="SEMAT Logo" src="about/images/logo.jpg" />
+            <img alt="SEMAT Logo" src="about/images/semat-logo.png" />
              
 
             <p>To access the app:</p>
@@ -95,7 +95,7 @@ th, td {
                 </li>
             </ul>
             <p>
-            The default user/password is <b><i>admin/admin</i></b>.
+            The default user/password is <b><i>user/user</i></b> for tenanted user and  <b><i>admin/admin</i></b> for full acceess
             </p>
         </div>
     </body>
