Added alpha summary field

--- a/webapp/src/main/resources/com/ofbizian/semat/webapp/footer/CustomFooterPanel.html
+++ b/webapp/src/main/resources/com/ofbizian/semat/webapp/footer/CustomFooterPanel.html
@@ -42,8 +42,8 @@
                     <ul class="nav navbar-nav">
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <p class="navbar-text powered-by">Powered by:</p>
-                        <li><a href="http://semat.org" target="_blank">SEMAT &#8482;</a></li>
+                        <p class="navbar-text powered-by">Created by:</p>
+                        <li><a href="http://twitter.com/bibryam" target="_blank"> @bibryam </a></li>
                         <li>
                             <a wicket:id="aboutLink" id="aboutLink" class="navbar-right">
                                 <span wicket:id="aboutMessage">About</span>
